--- a/app/views/static_pages/home.slim
+++ b/app/views/static_pages/home.slim
@@ -14,6 +14,6 @@
   p
     |  Click this button if you dont have an account
   p
-    = link_to "Sign up now!", class: "btn btn-lg btn-primary"
+    = link_to "Sign up now!", new_user_registration_path , class: "btn btn-lg btn-primary"
   br
   br
