--- a/app/views/layouts/_footer.slim
+++ b/app/views/layouts/_footer.slim
@@ -3,7 +3,7 @@ footer.footer
     ul
 
     div
-      |  Web Design Copyright © 2022.
+      = t "static_page.footer.by"
     a[href="https://www.facebook.com/profile.php?id=100009177741182" target="_blank"]
-      | Mangusidan
+      = t "static_page.footer.team"
       
