--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -1,6 +1,6 @@
 header.navbar.navbar-fixed-top.navbar-inverse
   .container
-    = link_to "E-Learning System", root_path, id: "logo"
+    = link_to I18n.t("static_page.title"), root_path, id: "logo"
     nav
       .navbar-header
         button.navbar-toggle.collapsed[type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"]
