--- a/app/views/devise/shared/_links.slim
+++ b/app/views/devise/shared/_links.slim
@@ -15,5 +15,6 @@
   br
 - if devise_mapping.omniauthable?
   - resource_class.omniauth_providers.each do |provider|
-    = button_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), data: { turbo: false }
+    = link_to "Log in with #{provider}", omniauth_authorize_path(:user, provider), method: :post
     br
+
