--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -10,6 +10,29 @@ header.navbar.navbar-fixed-top.navbar-inverse
           span.icon-bar
           span.icon-bar
       ul#bs-example-navbar-collapse-1.nav.navbar-nav.navbar-right.collapse.navbar-collapse
+
+      ul.nav.navbar-nav.navbar-right
         li
           = link_to "Home", root_path
-
+        - if user_signed_in?
+          li
+            = link_to "Users", '#'
+          li
+            = link_to "Categories", '#'
+          li
+            = link_to "Word List", '#'
+          li.dropdown
+            a.dropdown-toggle[href="#" data-toggle="dropdown"]
+              |  Account 
+              b.caret
+            ul.dropdown-menu
+              li
+                = link_to "Profile", "#"
+              li
+                = link_to "Settings", "#" 
+              li.divider
+              li
+                = link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete }
+        - else
+          li
+            = link_to "Log in", login_path
