--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -6,10 +6,12 @@ html
       |  | E-Learning System
     meta[charset="utf-8"]
     meta[name="viewport" content="width=device-width, initial-scale=1"]
+    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
+    = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
-    = csp_meta_tag
-    = stylesheet_link_tag 'application', media: 'all', 
-                                                'data-turbolinks-track': 'reload'
+    script[src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"]
+    script[src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"]
+    link[rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"]
   body
     = render 'layouts/header'
     .container
