--- a/app/views/devise/registrations/new.slim
+++ b/app/views/devise/registrations/new.slim
@@ -1,7 +1,7 @@
 .border-form-div
   h2
     | Sign up
-  = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+  = form_for resource, as: resource_name, url: registration_path(resource_name) do |f|
     = render "devise/shared/error_messages", resource: resource
     .field
       = f.label :email
@@ -21,5 +21,5 @@
       br
       = f.password_field :password_confirmation, autocomplete: "new-password"
     .actions
-      = f.submit "Sign up",:class=>'btn btn-primary'
+      = f.submit "Sign up", class:"btn btn-primary"
   = render "devise/shared/links"
