--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -27,12 +27,13 @@ header.navbar.navbar-fixed-top.navbar-inverse
               b.caret
             ul.dropdown-menu
               li
-                = link_to "Profile", "#"
+                = link_to "Profile", user_path(current_user)
               li
-                = link_to "Settings", "#" 
+                = link_to "Settings", edit_user_registration_path 
               li.divider
               li
                 = link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete }
         - else
           li
             = link_to "Log in", login_path
+
