--- a/app/views/devise/registrations/edit.slim
+++ b/app/views/devise/registrations/edit.slim
@@ -4,6 +4,7 @@
     = resource_name.to_s.humanize
   = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
     = render "devise/shared/error_messages", resource: resource
+
     .field
       = f.label :email
       br
@@ -12,6 +13,8 @@
       div
         | Currently waiting confirmation for: 
         = resource.unconfirmed_email
+    .field
+      = f.file_field :image
     .field
       = f.label :password
       i
