follow and fix edit avatar

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -75,7 +75,7 @@ footer {
   li {
     overflow: auto;
     padding: 10px 0;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid $gray-lighter;
   }
 }
 .gravatar {
