--- a/app/views/devise/registrations/edit.slim
+++ b/app/views/devise/registrations/edit.slim
@@ -14,7 +14,7 @@
         | Currently waiting confirmation for: 
         = resource.unconfirmed_email
     .field
-      = f.file_field :image
+      = f.file_field :avatar
     .field
       = f.label :password
       i
