--- a/app/views/devise/registrations/new.slim
+++ b/app/views/devise/registrations/new.slim
@@ -8,7 +8,7 @@
       br
       = f.email_field :email, autofocus: true, autocomplete: "email"
     .field
-      = f.file_field :image
+      = f.file_field :avatar
       br
     .field
       = f.label :password
