--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -16,7 +16,7 @@ header.navbar.navbar-fixed-top.navbar-inverse
           = link_to "Home", root_path
         - if user_signed_in?
           li
-            = link_to "Users", '#'
+            = link_to "Users", users_path
           li
             = link_to "Categories", '#'
           li
@@ -36,4 +36,3 @@ header.navbar.navbar-fixed-top.navbar-inverse
         - else
           li
             = link_to "Log in", login_path
-
